projects/sandbox/deployment/acceptance/sandbox-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sandbox-ui-service-acceptance
  name: sandbox-ui-service-acceptance
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: sandbox-ui-acceptance
  type: ClusterIP
