projects/sandbox/deployment/acceptance/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metis-sandbox-ui-service-acceptance
  name: metis-sandbox-ui-service-acceptance
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: metis-sandbox-ui-acceptance
  type: ClusterIP
