projects/sandbox/deployment/acceptance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metis-sandbox-ui-ingress-acceptance
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
    - hosts:
        - metis-sandbox.acceptance.eanadev.org
      secretName: metis-sandbox.acceptance.eanadev.org
  rules:
    - host: metis-sandbox.acceptance.eanadev.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metis-sandbox-ui-service-acceptance
                port:
                  number: 8080
